# lawless-waf

./: .dockerignore  .env.example  .gitignore  AGENTS.md  BACKLOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  SECURITY.md  compose.yaml  docker-entrypoint.sh  pyproject.toml
.claude/skills/setup-github-repo/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml  container-scan.yml  dependency-review.yml
docs/: troubleshooting.md  waf-concepts.md  walkthrough.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ActivityFeed.tsx  charts.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  select.tsx  table.tsx  tabs.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: AnalyzePage.tsx  DownloadPage.tsx  SettingsPage.tsx
frontend/src/pages/analyze/: CoveragePanel.tsx  Fullscreen.tsx  LiveTail.tsx  RequestInspector.tsx  SearchPanel.tsx  SearchResultsTable.tsx  shared.tsx
src/lawless_waf/: __init__.py  activity.py  appconfig.py  cache.py  localrepo.py  main.py  mcp_server.py  models.py  ratelimit.py  sample.py  service.py  settings.py
src/lawless_waf/analysis/: classify.py  exclusions.py  mapping.py  scanner.py
src/lawless_waf/api/: activity.py  analysis.py  azure.py  config.py  datasets.py  deps.py  exclusions.py  geoip.py
src/lawless_waf/azure/: discovery.py  downloader.py  estimate.py  session.py
src/lawless_waf/duck/: engine.py  queries.py  schema.py
tests/: conftest.py  test_activity.py  test_analysis.py  test_cache.py  test_config.py  test_delete.py  test_discovery.py  test_downloader.py  test_e2e.py  test_estimate.py  test_geoip.py  test_localrepo.py  test_mcp.py  test_queries.py  test_ratelimit.py  test_sample.py  test_service.py
