[project]
name = "lawless-waf"
version = "0.1.0"
description = "Fast WAF tuning context service: pull Azure WAF logs on demand, classify blocks, surface exclusion context for an AI coding agent."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "duckdb>=1.1",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "slowapi>=0.1.9",
    "mcp>=1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
    "ruff>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lawless_waf"]

[tool.ruff]
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S", "BLE"]

[tool.ruff.lint.per-file-ignores]
# Asserts are pytest's assertion mechanism; the "/tmp/..." literals are argv fixtures, not real files.
# S603/S607: tests shell out to `git` with fixed args to build throwaway repos — trusted input.
"tests/**" = ["S101", "S108", "S603", "S607"]
# Every f-string here interpolates a module-level SQL fragment constant (RULE_ID, ACTIONS, ...) or an
# internal int. Values a user can influence are bound with "?" — see duck/engine.py for the one
# interpolated value (policy), which is regex-validated at the boundary and escaped there.
"src/lawless_waf/duck/queries.py" = ["S608"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
